Added bug fixes for gtf2tsv and modified set-nh. The setnh function has been removed from the pyx file and added to bam2bam because it is not compiling correctly

--- a/tests/bam2bam.py/tests.yaml
+++ b/tests/bam2bam.py/tests.yaml
@@ -59,29 +59,13 @@ unset_mapq:
     references: [mapq_unset.bam]
     options: -v 0 --method=unset-unmapped-mapq
 
-downsample_paired_py2:
-    skip_python: 3
-    stdin: paired.bam
-    outputs: [stdout]
-    references: [downsample_paired.bam]
-    options: --method=downsample-paired --downsample=3000 --random-seed=1 -L out.log
-
-downsample_single_py2:
-    skip_python: 3
-    stdin: single.bam
-    outputs: [stdout]
-    references: [downsample_single.bam]
-    options: --method=downsample-single --downsample=3000 --random-seed=1 -L out.log
-
-downsample_paired_py3:
-    skip_python: 2
+downsample_paired:
     stdin: paired.bam
     outputs: [stdout]
     references: [downsample_paired_py3.bam]
     options: --method=downsample-paired --downsample=3000 --random-seed=1 -L out.log
 
-downsample_single_py3:
-    skip_python: 2
+downsample_single:
     stdin: single.bam
     outputs: [stdout]
     references: [downsample_single_py3.bam]
